apply button paths, clean up css, fix navbar collapse when logged in

--- a/web/public/css/global-menu.less
+++ b/web/public/css/global-menu.less
@@ -116,11 +116,6 @@
   height: 27px;
 }
 
-.horiz-align {
-  width: 1140px;
-  margin: 0px auto;
-}
-
 .text-right {
   text-align: right;
 }
@@ -230,11 +225,6 @@
   .alert-message .row {
     width: 710px;
   }
-
-  .cd-mainnav-container {
-    width: 100%;
-  }
-
 }
 
 @media only screen and (min-width: 768px) {
